package funções.aparelhoTelefonico;

public interface AparelhoTelefonico {
    public void ligar();
    public void iniciarCorreio();
    public void atender();
}
