package funções.navegadorinternet;

public interface NavegadorInternet  {
    public void exibirPagina();
    public void adicionarNovaAba();
    public void atualizarPagina();

}
